--- a/font_end/src/utils/locales/vi/translation.json
+++ b/font_end/src/utils/locales/vi/translation.json
@@ -56,7 +56,9 @@
 		"category": "Danh mục",
 		"file_manager": "Quản lý tập tin",
 		"hello": "Xin Chào!",
-		"user": "Người dùng"
+		"user": "Người dùng",
+		"shared": "Chia sẻ",
+		"share": "Chia sẻ"
 	},
 	"sidebar": {
 		"dashboard": "Trang chủ",
@@ -86,6 +88,7 @@
 	},
 	"createDocument": {
 		"new_folder": "Thư mục mới",
+		"share": "Chia sẻ",
 		"name": "Tên danh mục",
 		"category": "Danh mục",
 		"rename_folder": "Đổi tên thư mục",
@@ -192,6 +195,7 @@
 	"tenant": {
 		"search": "Tìm kiếm",
 		"name": "Tên",
+		"share": "Chia sẻ",
 		"login_name": "Tên đăng nhập",
 		"from_date": "Từ ngày",
 		"to_date": "Đến ngày",
